[gd_scene load_steps=2 format=3 uid="uid://uljnxxfaf7lf"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_gpib2"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_gpib2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.5
offset_right = 54.5
offset_bottom = 36.0
grow_horizontal = 2
theme_override_constants/separation = 120

[node name="ScoreContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="HBoxContainer/ScoreContainer"]
layout_mode = 2
text = "score"

[node name="Score" type="Label" parent="HBoxContainer/ScoreContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="TimeContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/TimeContainer"]
layout_mode = 2
text = "Time"

[node name="TimeLeft" type="Label" parent="HBoxContainer/TimeContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "300"
horizontal_alignment = 2

[node name="LivesContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/LivesContainer"]
layout_mode = 2
text = "Lives
"

[node name="Lives" type="Label" parent="HBoxContainer/LivesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2"
horizontal_alignment = 2

[node name="WinText" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="WinText"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "YOU WIN!"

[node name="GameBeatenText" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameBeatenText"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "YOU BEAT THE GAME!"

[node name="GameOverText" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverText"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
